--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 a {
   font-weight: 500;
@@ -42,8 +45,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
+  background-color: rgb(233, 76, 19);
   transition: border-color 0.25s;
 }
 button:hover {
@@ -56,11 +59,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #0e2131;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #1a2086;
   }
   button {
     background-color: #f9f9f9;
